- Test Marketplace Loading - FIX CSS Marketplace align

--- a/scss/pages/_marketplace-inner.scss
+++ b/scss/pages/_marketplace-inner.scss
@@ -52,11 +52,16 @@
   &-header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     .oxfl-title4 {
       max-width: calc(100% - 60px);
       text-overflow: ellipsis;
       overflow: hidden;
       white-space: nowrap;
+    }
+    .oxfl-resource-coins,
+    .oxfl-title4 {
+      margin-bottom: 5px;
     }
   }
 
